--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/checkbox": "^2.1.5",
+    "@nextui-org/dropdown": "^2.3.7",
     "@nextui-org/image": "^2.0.32",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/modal": "^2.0.41",
